webui: fix text file note preview wrapping

--- a/src/web/style.css
+++ b/src/web/style.css
@@ -245,6 +245,7 @@ pre#note { border: solid #697da3 0.25em; }
       width: 100%;
       height: 100%;
       border-radius: 0.7em;
+      text-wrap: auto;
       &.img {
         padding: 0;
         width: auto;
